--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ pytest-django = "*"
 python-decouple = "*"
 dj-database-url = "*"
 psycopg2-binary = "*"
+whitenoise = "*"
+cloudinary = "*"
+django-cloudinary-storage = "*"
 
 [dev-packages]
 flake8 = "*"
