configurado armazenamento statico no cloudinary
close #34

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ psycopg2-binary = "*"
 whitenoise = "*"
 cloudinary = "*"
 django-cloudinary-storage = "*"
+collectfast = "*"
 
 [dev-packages]
 flake8 = "*"
