--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ whitenoise = "*"
 cloudinary = "*"
 django-cloudinary-storage = "*"
 collectfast = "*"
+django-debug-toolbar = "*"
 
 [dev-packages]
 flake8 = "*"
